# gwmcp

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup_cli.py
core/: utils.py
gtasks/: tasks_tools.py
